--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">FinalAndroidMqtt</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="client_details">Client ID: %1$s Client server URI: %2$s Client topic: %3$s</string>
+
 </resources>
