--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="client_details">Client ID: %1$s Client server URI: %2$s Client topic: %3$s</string>
+    <string name="broker_uri">Broker Uri</string>
+    <string name="submit">Submit</string>
+    <string name="client_id">Client ID</string>
+    <string name="add_client">Add Client</string>
+    <string name="add_subscription">Add Subscription</string>
 
     <string-array name="dropdown_items">
         <item>Item 1</item>
