Implement MQTT Pub/Sub Mechanism in Android App[https://a00287845.atlassian.net/jira/software/projects/FAP/boards/2?selectedIssue=FAP-7]

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="clients">Clients</string>
     <string name="subscriptions">Subscriptions</string>
     <string name="topic">topic</string>
+    <string name="enter_topic_to_publish_to">Enter topic to publish to</string>
 
     <string-array name="dropdown_items">
         <item>Item 1</item>
